Restore visible overflow for participants list in the admin view of a seminar. Overflow hidden prevents the attendance popup from showing.

--- a/app/assets/stylesheets/admin/seminars.css.scss
+++ b/app/assets/stylesheets/admin/seminars.css.scss
@@ -78,7 +78,6 @@ ul.participants-list {
     margin: 5px;
     float: left;
     height: 50px;
-    overflow: hidden;
     padding: 0 !important;
     width: 193px;
 
